--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ethereum-attestation-service/eas-sdk": "^2.5.0",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
@@ -34,6 +35,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
+    "ethers": "^6.13.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
